// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorageArea refresh popup confirm resets all box contents to empty 1`] = `
<div>
  <div
    class="storage-area"
  >
    <header>
      <h1>
        Trauma Tower
      </h1>
      <button
        aria-label="restart"
        class="restart"
        type="button"
      >
        <svg>
          refresh.svg
        </svg>
      </button>
    </header>
    <main>
      <div
        class="scroll"
      >
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 1
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 2
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 3
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 4
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 5
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 6
          </div>
        </div>
      </div>
    </main>
    <footer>
      <a
        class="needed"
        href="/needed"
      >
        Items needed
      </a>
    </footer>
    <div
      class="confirm-reset-popup"
    >
      <div
        class="popup-container"
      >
        <div
          class="message"
        >
          Reset all boxes to empty - are you sure?
        </div>
        <div
          class="actions"
        >
          <button
            class="confirm-no"
            type="button"
          >
            No
          </button>
          <button
            class="confirm-yes"
            type="button"
          >
            Yes
          </button>
        </div>
      </div>
    </div>
    <div
      class="modal-overlay"
    />
  </div>
</div>
`;

exports[`StorageArea renders correctly 1`] = `
<div>
  <div
    class="storage-area"
  >
    <header>
      <h1>
        Trauma Tower
      </h1>
      <button
        aria-label="restart"
        class="restart"
        type="button"
      >
        <svg>
          refresh.svg
        </svg>
      </button>
    </header>
    <main>
      <div
        class="scroll"
      >
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 1
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 2
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 3
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 4
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 5
          </div>
        </div>
        <div
          class="box"
        >
          <button
            aria-label="check box"
            class="check-box"
            type="button"
          >
            <svg>
              edit.svg
            </svg>
          </button>
          <div
            class="display-name"
          >
            Trauma Chest Drain - Box 6
          </div>
        </div>
      </div>
    </main>
    <footer>
      <a
        class="needed"
        href="/needed"
      >
        Items needed
      </a>
    </footer>
  </div>
</div>
`;
